# pbTechLab_PrimitiveFxLibrary

./: .gitignore  README.ja.md  README.md
iplug2/pbPFL_3BandEQ/: CMakeLists.txt  PbPFL3BandEQ.cpp  PbPFL3BandEQ.h  config.h
iplug2/pbPFL_3BandEQ/resources/: pbPFL_3BandEQ-AAX-Info.plist  pbPFL_3BandEQ-VST3-Info.plist  pbPFL_3BandEQ-macOS-Info.plist
iplug2/pbPFL_4BandEQ/: CMakeLists.txt  PbPFL4BandEQ.cpp  PbPFL4BandEQ.h  config.h
iplug2/pbPFL_4BandEQ/resources/: pbPFL_4BandEQ-AAX-Info.plist  pbPFL_4BandEQ-VST3-Info.plist  pbPFL_4BandEQ-macOS-Info.plist
iplug2/pbPFL_4BandEQ/resources/web/: index.html  knob-render.js  script.js
iplug2/pbPFL_AutoPan/: CMakeLists.txt  PbPFLAutoPan.cpp  PbPFLAutoPan.h  config.h
iplug2/pbPFL_AutoPan/resources/: pbPFL_AutoPan-AAX-Info.plist  pbPFL_AutoPan-VST3-Info.plist  pbPFL_AutoPan-macOS-Info.plist
iplug2/pbPFL_Chorus/: CMakeLists.txt  PbPFLChorus.cpp  PbPFLChorus.h  config.h
iplug2/pbPFL_Chorus/resources/: pbPFL_Chorus-AAX-Info.plist  pbPFL_Chorus-VST3-Info.plist  pbPFL_Chorus-macOS-Info.plist
iplug2/pbPFL_Compressor/: CMakeLists.txt  PbPFLCompressor.cpp  PbPFLCompressor.h  config.h
iplug2/pbPFL_Compressor/resources/: pbPFL_Compressor-AAX-Info.plist  pbPFL_Compressor-VST3-Info.plist  pbPFL_Compressor-macOS-Info.plist
iplug2/pbPFL_Delay/: CMakeLists.txt  PbPFLDelay.cpp  PbPFLDelay.h  config.h
iplug2/pbPFL_Delay/resources/: pbPFL_Delay-AAX-Info.plist  pbPFL_Delay-VST3-Info.plist  pbPFL_Delay-macOS-Info.plist
iplug2/pbPFL_Distortion/: CMakeLists.txt  PbPFLDistortion.cpp  PbPFLDistortion.h  config.h
iplug2/pbPFL_Distortion/resources/: pbPFL_Distortion-AAX-Info.plist  pbPFL_Distortion-VST3-Info.plist  pbPFL_Distortion-macOS-Info.plist
iplug2/pbPFL_Flanger/: CMakeLists.txt  MIGRATION_NOTES.md  PbPFLFlanger.cpp  PbPFLFlanger.h  config.h
iplug2/pbPFL_Flanger/resources/: pbPFL_Flanger-AAX-Info.plist  pbPFL_Flanger-VST3-Info.plist  pbPFL_Flanger-macOS-Info.plist
iplug2/pbPFL_Limiter/: CMakeLists.txt  PbPFLLimiter.cpp  PbPFLLimiter.h  config.h
iplug2/pbPFL_Limiter/resources/: pbPFL_Limiter-AAX-Info.plist  pbPFL_Limiter-VST3-Info.plist  pbPFL_Limiter-macOS-Info.plist
iplug2/pbPFL_MidSideProcessor/: CMakeLists.txt  PbPFLMidSideProcessor.cpp  PbPFLMidSideProcessor.h  config.h
iplug2/pbPFL_MidSideProcessor/resources/: pbPFL_MidSideProcessor-AAX-Info.plist  pbPFL_MidSideProcessor-VST3-Info.plist  pbPFL_MidSideProcessor-macOS-Info.plist
iplug2/pbPFL_Phaser/: CMakeLists.txt  PbPFLPhaser.cpp  PbPFLPhaser.h  config.h
iplug2/pbPFL_Phaser/resources/: pbPFL_Phaser-AAX-Info.plist  pbPFL_Phaser-VST3-Info.plist  pbPFL_Phaser-macOS-Info.plist
iplug2/pbPFL_PitchShifter/: CMakeLists.txt  PbPFLPitchShifter.cpp  PbPFLPitchShifter.h  config.h
iplug2/pbPFL_PitchShifter/resources/: pbPFL_PitchShifter-AAX-Info.plist  (+2 more)
iplug2/pbPFL_Reverb/: CMakeLists.txt  PbPFLReverb.cpp  PbPFLReverb.h  config.h
iplug2/pbPFL_StereoEnhancer/: CMakeLists.txt  PbPFLStereoEnhancer.cpp  PbPFLStereoEnhancer.h  config.h
iplug2/pbPFL_StereoWidth/: CMakeLists.txt  PbPFLStereoWidth.cpp  PbPFLStereoWidth.h  config.h
iplug2/pbPFL_Tremolo/: CMakeLists.txt  PbPFLTremolo.cpp  PbPFLTremolo.h  config.h
iplug2/pbPFL_Vibrato/: CMakeLists.txt  PbPFLVibrato.cpp  PbPFLVibrato.h  config.h
(+48 files in other folders)
